<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="#9C27B0"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/calculator" />

    <EditText
        android:id="@+id/first_val"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/enter_first_value"
        android:inputType="number"
        android:padding="10dp"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/second_val"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_second_value"
        android:inputType="number"
        android:padding="10dp"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/result"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:padding="15dp"
        android:text="@string/add"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:padding="15dp"
        android:text="@string/subtract"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/mul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:padding="15dp"
        android:text="@string/multiply"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:padding="15dp"
        android:text="@string/divide"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="bold"
        tools:ignore="VisualLintBounds" />

</LinearLayout>
